refactor: to performance